# BZen

./: .gitignore  README.md  error.py  exceptions.py  license.md  log.py  main.py  material.py  pyproject.toml  requirements.txt  run_blender.ps1  user_run.ps1  utils.py  visual.py  vob.py  zen_to_blend.py
BZen/: main.py  utils.py
bzen/: __init__.py  main.py  material.py  scene.py  utils.py  visual.py  vob.py  zen_to_blend.py
temp_dir/: zen_to_blend.py
