[project]
name = "bzen"
version = "0.2.0"
description = "BZen is a powerful command-line tool for converting 3D world files (ZENs) from the Gothic and Gothic II games into Blender projects."
authors = [{ name = "Zira3l137" }]
readme = "README.md"
license = "MIT"
license-files = ["license.md"]
requires-python = ">=3.10"
dependencies = ["zenkit @ git+https://github.com/Zira3l137/ZenKit4Py.git"]

[project.scripts]
bzen = "bzen.main:main"

[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["bzen"]

[tool.black]
line-length = 120
